# score_talk

./: .gitignore  5003_final_project.drawio  README.md  app.db  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py  auth.py  posts_comments_ratings.py  topics.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: models.py
app/schemas/: auth.py  base.py  comment.py  pagination.py  post.py  rating.py  topic.py  user.py
debug/: detect_cors.http
docs/: 1. Requirement Analysis.md  2. Conceptual Design.md  2. ER Diagram.drawio  3. API design.md  3. openapi.json
score_talk_frontend/: PACKAGE_README.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
score_talk_frontend/src/: App.jsx  AuthContext.jsx  api.js  main.jsx  styles.css
score_talk_frontend/src/components/: AuthForms.jsx  AuthForms.module.css  Modal.jsx  Modal.module.css  PostDetail.jsx  PostDetail.module.css  PostList.jsx  PostList.module.css  StarRating.jsx  StarRating.module.css  TopicDetail.jsx  TopicDetail.module.css  TopicList.jsx  TopicList.module.css
